<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cr.ac.una</groupId>
    <artifactId>evacomuna</artifactId>
    <version>1.0</version>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <dependencies>
        <!-- JavaFX dependencies -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>20.0.1</version>
        </dependency>
        <!-- https://mvnrepository.com/artifact/clojure-interop/java.awt -->
<!--        <dependency>
            <groupId>clojure-interop</groupId>
            <artifactId>java.awt</artifactId>
            <version>1.0.2</version>
        </dependency>-->

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>20.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.controlsfx</groupId>
            <artifactId>controlsfx</artifactId>
            <version>11.1.2</version>
        </dependency>
        <!-- Jakarta EE dependencies -->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.xml.ws</groupId>
            <artifactId>jakarta.xml.ws-api</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>jakarta.activation</groupId>
            <artifactId>jakarta.activation-api</artifactId>
            <version>2.1.2</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.ws</groupId>
            <artifactId>jaxws-rt</artifactId>
            <version>4.0.1</version>
        </dependency>
        <!--AnimateFX
        Library-->
        <dependency>
            <groupId>io.github.typhon0</groupId>
            <artifactId>AnimateFX</artifactId>
            <version>1.2.4</version>
        </dependency>
        <!--        Serialize Byte-Image and Reverse-->
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.24.0</version>
            <type>jar</type>
        </dependency>
        <!--        Parse HTML to String-->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.13.0</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.4.11</version>
        </dependency>
        <!--Apache poi-->
        <dependency>
            <groupId>org.apache.poi</groupId>
            <artifactId>poi</artifactId>
            <version>5.2.3</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-codegen-plugin</artifactId>
                <version>4.0.2</version>
                <executions>
                    <execution>
                        <id>generate-sources</id>
                        <phase>generate-sources</phase>
                        <configuration>
                            <sourceRoot>${project.basedir}/src/main/java</sourceRoot>
                            <wsdlOptions>
                                <wsdlOption>
                                    <wsdl>http://localhost:8080/evacomunaws/UserController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/CharacteristicController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>http://localhost:8080/evacomunaws/SkillController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>http://localhost:8080/evacomunaws/PositionController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/EvaluationController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/EvaluatorController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/EvaluatedController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/GeneralInformationController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/CalificationController?wsdl</wsdl>
                                </wsdlOption>
                                <wsdlOption>
                                    <wsdl>
                                        http://localhost:8080/evacomunaws/FinalCalificationController?wsdl</wsdl>
                                </wsdlOption>
                            </wsdlOptions>
                        </configuration>
                        <goals>
                            <goal>wsdl2java</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--add-exports=your.module.name/org.apache.cxf.core=cr.ac.una.evacomuna</arg>
                        <arg>
                            --add-exports=your.module.name/org.apache.cxf.rt.frontend.jaxws=cr.ac.una.evacomuna</arg>
                        <arg>
                            --add-exports=your.module.name/org.apache.cxf.frontend.simple=cr.ac.una.evacomuna</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>Evacomuna/cr.ac.una.evacomuna.App</mainClass>
                </configuration>
                <executions>
                    <execution>
                        <!-- Default configuration for running -->
                        <!-- Usage: mvn clean javafx:run -->
                        <id>default-cli</id>
                    </execution>
                    <execution>
                        <!-- Configuration for manual attach debugging -->
                        <!-- Usage: mvn clean javafx:run@debug -->
                        <id>debug</id>
                        <configuration>
                            <options>
                                <option>
                                    -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=localhost:8000</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE debugging -->
                        <id>ide-debug</id>
                        <configuration>
                            <options>
                                <option>
                                    -agentlib:jdwp=transport=dt_socket,server=n,address=${jpda.address}</option>
                            </options>
                        </configuration>
                    </execution>
                    <execution>
                        <!-- Configuration for automatic IDE profiling -->
                        <id>ide-profile</id>
                        <configuration>
                            <options>
                                <option>${profiler.jvmargs.arg1}</option>
                                <option>${profiler.jvmargs.arg2}</option>
                                <option>${profiler.jvmargs.arg3}</option>
                                <option>${profiler.jvmargs.arg4}</option>
                                <option>${profiler.jvmargs.arg5}</option>
                            </options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>